...
                          borderRadius: BorderRadius.circular(20)
                        ),
                        contentPadding: const EdgeInsets.symmetric(
                          vertical: 20.0,
                          horizontal: 20.0
                        ),
                        labelText: 'Enter a title for the item',
                        // labelStyle: TextStyle(),
                        hintText: 'title',
                        // hintStyle: TextStyle(),
                      ),
                    ),
                    const SizedBox(height: 15.0,),
...
                          borderRadius: BorderRadius.circular(20)
                        ),
                        contentPadding: const EdgeInsets.symmetric(
                          vertical: 20.0,
                          horizontal: 20.0
                        ),
                        labelText: 'Enter a description for the item',
                        // labelStyle: TextStyle(),
                        hintText: 'description',
                        // hintStyle: TextStyle(),
                      ),
                    ),
                    const SizedBox(height: 20.0,),
...
