...
                      ),
                      child: const Row(
                        children: [
                          Icon(Icons.add, color: Colors.white, size: 20.0,),
                          SizedBox(width: 5.0,),
                          Text(
                            'New',
                            style: TextStyle(
                              color: Colors.white,
                            ),
                          )
                        ],
                      ),
...
